--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site was created by Vikas Baraik while going through a udemy course on Node.js by Andrew Mead.It uses data from mapbox.com and weatherstack.com!</p>
             <img class="portrait" src="/img/me.jpg">
         </div>
         {{>footer}}
