--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>404</title>
+        <title>{{title}}</title>
         <link rel="icon" href="/img/weather.png">
         <link rel="stylesheet" href="/css/styles.css">
     </head>
